# asstosrt-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  Web.toml  asstosrt_wasm.js  asstosrt_wasm.wasm  asstosrt_wasm_bg.wasm  index.css  index.html  index.js  rust-toolchain.toml  s2t.dict  s2t.txt  t2s.dict  update_dict.py  worker.js
.github/workflows/: pages.yml
js/: app.js
locales/: en.json  zh-Hans.json  zh-Hant.json
public/: styles.scss  t2s.txt
scripts/: hash_worker.py  update_dict.py
src/: app.rs  drag.rs  form.rs  lib.rs  main.rs  subtitle.rs  zip.rs
src/app/: converter.rs  drag.rs  form.rs  mod.rs  storage.rs  task.rs
src/app/components/: donate.rs  file_input.rs  mod.rs  options_form.rs  task.rs  toggle_bar.rs
src/app/pages/: home.rs  mod.rs  not_found.rs
src/simplecc/: mod.rs  tests.rs
src/subtitle/: lines.rs  mod.rs  tests.rs
src/worker/: mod.rs  walk.rs  zip.rs
src/worker/subtitle/: mod.rs  tests.rs
static/: index.css  index.html  index.js  s2t.txt  t2s.txt  worker.js
