[package]
name = "asstosrt_wasm"
version = "0.1.0"
authors = ["sorz <orz@sorz.org>"]
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
leptos_i18n = { version = "0.5", default-features = false, features = ["csr", "json_files"] } 
reactive_stores = "0.1"
console_log = "1"
log = "0.4"
thiserror = "2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console", "Window", "Navigator", "Storage",
    "Url", "Blob", "BlobPropertyBag",
    "File", "FileList", "FileReaderSync",
    "DataTransfer", "DataTransferItem", "DataTransferItemList",
    "DedicatedWorkerGlobalScope", "Worker", "WorkerOptions", "WorkerType",
] }
js-sys = { version = "0.3" }
gloo-net = { version = "0.6", default-features = false, features = ["http"] } 
regex-lite = "0.1"
uuid = { version = "1", features = ["v4", "js"] }
futures = "0.3"
send_wrapper = "0.6"
lazy_static = "1"
chardetng = "0.1"
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
simplecc = "0.2"
crc = "3"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "zh-Hans", "zh-Hant"]
